# templates

./: LOGGING.md  README.md  templates.json
go-cli/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  go.mod  justfile  main.go
go-cli/.github/workflows/: release.yml
go-cli/cmd/: completions.go  config.go  init.go  root.go  run.go
go-cli/docs/adr/: README.md
go-cli/examples/: config.schema.json  config.toml
go-cli/internal/app/: config.go  context.go  flags.go  handlers.go  logging.go  paths.go  util.go
go-cli/scripts/: new-cli.ps1  new-cli.sh
python-cli/: .ast-grepignore  .gitignore  AGENTS.md  CONTEXT.md  README.md  justfile  pyproject.toml  sgconfig.yml  uv.toml
python-cli/.github/workflows/: release.yml
python-cli/.pi/todos/: 019daef2-1e11-72b0-805e-8ed3687bd69f.json
python-cli/ast-grep/rules/: no-bare-except.yml  no-breakpoint.yml  no-eval-exec.yml  no-os-system.yml  no-print-in-library.yml  no-subprocess-shell-true.yml
python-cli/docs/adr/: 0000-template.md
python-cli/examples/: config.schema.json  config.toml
python-cli/python_cli/: __init__.py  __main__.py  config.py  config.schema.json  handlers.py  logging_config.py  main.py  runtime.py
python-cli/scripts/: copy_config_schema.sh  new-cli.ps1  new-cli.sh
python-cli/tests/: test_config.py  test_handlers.py
rust-cli/: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
rust-cli/.github/workflows/: release.yml
rust-cli/examples/: config.schema.json  config.toml  generate_config.rs
rust-cli/scripts/: new-cli.ps1  new-cli.sh
rust-cli/src/: lib.rs  main.rs
rust-workspace/: AGENTS.md  Cargo.toml  README.md  clippy.toml  justfile
rust-workspace/.ast-grep/: sgconfig.yml
rust-workspace/.ast-grep/rules/: rust-no-clippy-allow.yml  rust-no-unwrap-expect.yml
rust-workspace/.github/workflows/: release.yml
rust-workspace/.pi/todos/: b9c2bd8e-30bb-48d1-a0cf-f8ab93c8286b.json
rust-workspace/crates/byteowlz-tui-kit/: Cargo.toml
rust-workspace/crates/byteowlz-tui-kit/src/: action.rs  event.rs  fuzzy.rs  lib.rs  palette.rs  terminal.rs  theme.rs  whichkey.rs  widgets.rs
rust-workspace/crates/rust-api/: Cargo.toml
rust-workspace/crates/rust-api/src/: main.rs
rust-workspace/crates/rust-cli/: Cargo.toml
rust-workspace/crates/rust-cli/src/: main.rs
rust-workspace/crates/rust-core/: Cargo.toml
rust-workspace/crates/rust-core/examples/: generate_config.rs
rust-workspace/crates/rust-core/src/: config.rs  error.rs  lib.rs  paths.rs  schema.rs
rust-workspace/crates/rust-mcp/: Cargo.toml
rust-workspace/crates/rust-mcp/src/: main.rs
rust-workspace/crates/rust-tui/: Cargo.toml
rust-workspace/crates/rust-tui/src/: main.rs
rust-workspace/examples/: config.schema.json  config.toml
rust-workspace/scripts/: new-cli.sh
