[package]
name = "rust-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive", "env"] }
clap_complete = "4.5.65"
config = { version = "0.15.19", features = ["toml"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.1"
serde_yaml = "0.9.34"
toml = "0.9.11"

[[example]]
name = "generate_config"
path = "examples/generate_config.rs"
