[package]
name = "rust-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI interface for the rust-workspace template"

[lints]
workspace = true

[[bin]]
name = "rust-cli"
path = "src/main.rs"

[dependencies]
rust-core.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
