[package]
name = "rust-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
config.workspace = true
dirs.workspace = true
shellexpand.workspace = true
schemars.workspace = true
