[package]
name = "rust-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rust-mcp"
path = "src/main.rs"

[dependencies]
rust-core.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
